3722 link-editor is over restrictive of R_AMD64_32 addends Reviewed by: Gordon Ross <gwr@nexenta.com> Reviewed by: Joshua M. Clulow <josh@sysmgr.org> Approved by: Robert Mustacchi <rm@joyent.com>